--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
           </li>
         )
       },
-      
+
       handleComplete: function(){
-        alert('trying to complete item with an id of ' + this.props.id)
+        ListStore.toggleCompleteness(this.props.id)
       }
     })
 
